fix: product card UI case: product name is too long

--- a/public/assets/css/scss/_gird-item.scss
+++ b/public/assets/css/scss/_gird-item.scss
@@ -141,9 +141,12 @@
 
     .name {
       text-align: center;
-      padding: 10px 10px;
+      padding: 10px 15px;
 
       a h3 {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
         font-size: 1.25rem;
         margin: 0 0;
         color: #444;
